@@ -1,36 +1,19 @@
 /**
- * 
- * This file is part of Jahia: An integrated WCM, DMS and Portal Solution
- * Copyright (C) 2002-2009 Jahia Limited. All rights reserved.
- * 
- * This program is free software; you can redistribute it and/or
- * modify it under the terms of the GNU General Public License
- * as published by the Free Software Foundation; either version 2
- * of the License, or (at your option) any later version.
- * 
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
- * GNU General Public License for more details.
- * 
- * You should have received a copy of the GNU General Public License
- * along with this program; if not, write to the Free Software
- * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
- * 
- * As a special exception to the terms and conditions of version 2.0 of
- * the GPL (or any later version), you may redistribute this Program in connection
- * with Free/Libre and Open Source Software ("FLOSS") applications as described
- * in Jahia's FLOSS exception. You should have recieved a copy of the text
- * describing the FLOSS exception, and it is also available here:
- * http://www.jahia.com/license"
- * 
- * Commercial and Supported Versions of the program
- * Alternatively, commercial and supported versions of the program may be used
- * in accordance with the terms contained in a separate written agreement
- * between you and Jahia Limited. If you are unsure which license is appropriate
- * for your use, please contact the sales department at sales@jahia.com.
+ * Jahia Enterprise Edition v6
+ *
+ * Copyright (C) 2002-2009 Jahia Solutions Group. All rights reserved.
+ *
+ * Jahia delivers the first Open Source Web Content Integration Software by combining Enterprise Web Content Management
+ * with Document Management and Portal features.
+ *
+ * The Jahia Enterprise Edition is delivered ON AN "AS IS" BASIS, WITHOUT WARRANTY OF ANY KIND, EITHER EXPRESSED OR
+ * IMPLIED.
+ *
+ * Jahia Enterprise Edition must be used in accordance with the terms contained in a separate license agreement between
+ * you and Jahia (Jahia Sustainable Enterprise License - JSEL).
+ *
+ * If you are unsure which license is appropriate for your use, please contact the sales department at sales@jahia.com.
  */
-
 // $Id$
 //
 //  LicenseInfo
@@ -141,6 +124,10 @@ public class LicenseInfo extends AbstractAdministrationModule {
         if (sReg != null) {
 
             try {
+                String unlimited = JahiaResourceBundle
+                        .getJahiaInternalResource(
+                                "org.jahia.admin.status.ManageStatus.unlimited.label",
+                                jParams.getLocale(), "unlimited");
                 int nbCurrentSites     = sReg.getJahiaSitesService().getNbSites();
                 int nbMaxSites         = Jahia.getSiteLimit();
                 int nbCurrentUsers     = sReg.getJahiaUserManagerService().getNbUsers();
@@ -150,29 +137,17 @@ public class LicenseInfo extends AbstractAdministrationModule {
                 int nbCurrentPages     = sReg.getJahiaPageService().getRealActiveNbPages();
                 int nbMaxPages         = Jahia.getPageLimit();
 
-                String maxSites     = (nbMaxSites == -1)     ? "unlimited" : Integer.toString(nbMaxSites);
-                String maxUsers     = (nbMaxUsers == -1)     ? "unlimited" : Integer.toString(nbMaxUsers);
-                String maxTemplates = (nbMaxTemplates == -1) ? "unlimited" : Integer.toString(nbMaxTemplates);
-                String maxPages     = (nbMaxPages == -1)     ? "unlimited" : Integer.toString(nbMaxPages);
+                String maxSites     = (nbMaxSites == -1)     ? unlimited : Integer.toString(nbMaxSites);
+                String maxUsers     = (nbMaxUsers == -1)     ? unlimited : Integer.toString(nbMaxUsers);
+                String maxTemplates = (nbMaxTemplates == -1) ? unlimited : Integer.toString(nbMaxTemplates);
+                String maxPages     = (nbMaxPages == -1)     ? unlimited : Integer.toString(nbMaxPages);
 
-                LicensePackage licensePackage = LicenseManager.getInstance().
-                    getLicensePackage(LicenseConstants.JAHIA_PRODUCT_NAME);
+                LicensePackage licensePackage = LicenseManager.getInstance().getJahiaLicensePackage();
 
-                Limit daysLeftLimit = licensePackage.
-                            getLicense("org.jahia.actions.server.admin.sites.ManageSites").
-                            getLimit("maxUsageDays");
-                // the limit might be null if a license has been created without
-                // this limit.
-                if (daysLeftLimit != null) {
-                    CommonDaysLeftValidator daysLeftValidator = (CommonDaysLeftValidator)
-                        daysLeftLimit.getValidator();
-                    int maxDays = Integer.parseInt(daysLeftLimit.getValueStr());
-                    req.setAttribute("allowedDays", new Integer(maxDays));
-                    long expirationTime = daysLeftValidator.
-                        getCommonInstallDate().getTime() +
-                        1000L * 60L * 60L * 24L * maxDays;
-                    Date expirationDate = new Date(expirationTime);
-                    req.setAttribute("expirationDate", expirationDate);
+                req.setAttribute("allowedDays", Integer.valueOf((LicenseManager.getInstance().getJahiaMaxUsageDays())));
+                long expirationDate = LicenseManager.getInstance().getJahiaExpirationDate();
+                if (expirationDate > 0) {
+                    req.setAttribute("expirationDate", new Date(expirationDate));
                 }
 
                 req.setAttribute("nbCurrentSites",     Integer.toString(nbCurrentSites)      );
