@@ -1,36 +1,19 @@
 /**
- * 
- * This file is part of Jahia: An integrated WCM, DMS and Portal Solution
- * Copyright (C) 2002-2009 Jahia Limited. All rights reserved.
- * 
- * This program is free software; you can redistribute it and/or
- * modify it under the terms of the GNU General Public License
- * as published by the Free Software Foundation; either version 2
- * of the License, or (at your option) any later version.
- * 
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
- * GNU General Public License for more details.
- * 
- * You should have received a copy of the GNU General Public License
- * along with this program; if not, write to the Free Software
- * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
- * 
- * As a special exception to the terms and conditions of version 2.0 of
- * the GPL (or any later version), you may redistribute this Program in connection
- * with Free/Libre and Open Source Software ("FLOSS") applications as described
- * in Jahia's FLOSS exception. You should have recieved a copy of the text
- * describing the FLOSS exception, and it is also available here:
- * http://www.jahia.com/license"
- * 
- * Commercial and Supported Versions of the program
- * Alternatively, commercial and supported versions of the program may be used
- * in accordance with the terms contained in a separate written agreement
- * between you and Jahia Limited. If you are unsure which license is appropriate
- * for your use, please contact the sales department at sales@jahia.com.
+ * Jahia Enterprise Edition v6
+ *
+ * Copyright (C) 2002-2009 Jahia Solutions Group. All rights reserved.
+ *
+ * Jahia delivers the first Open Source Web Content Integration Software by combining Enterprise Web Content Management
+ * with Document Management and Portal features.
+ *
+ * The Jahia Enterprise Edition is delivered ON AN "AS IS" BASIS, WITHOUT WARRANTY OF ANY KIND, EITHER EXPRESSED OR
+ * IMPLIED.
+ *
+ * Jahia Enterprise Edition must be used in accordance with the terms contained in a separate license agreement between
+ * you and Jahia (Jahia Sustainable Enterprise License - JSEL).
+ *
+ * If you are unsure which license is appropriate for your use, please contact the sales department at sales@jahia.com.
  */
-
 // $Id$
 //
 //  ManageSites
@@ -2236,16 +2219,11 @@ public class ManageSites extends AbstractAdministrationModule {
      */
     private void setAllowedDayRequestAttr(HttpServletRequest request) {
         try {
-            LicensePackage licensePackage = LicenseManager.getInstance().
-                    getLicensePackage(LicenseConstants.JAHIA_PRODUCT_NAME);
-            Limit daysLeftLimit = licensePackage.getLicense("org.jahia.actions.server.admin.sites.ManageSites").getLimit("maxUsageDays");
-            // the limit might be null if a license has been created without
-            // this limit.
-            if (daysLeftLimit != null) {
-                int maxDays = Integer.parseInt(daysLeftLimit.getValueStr());
-                request.setAttribute("allowedDays", new Integer(maxDays));
-                final EngineMessage allowedDaysMsg = new EngineMessage("org.jahia.bin.JahiaConfigurationWizard.congratulations.daysLeftInLicense.label", new Integer(maxDays));
-                request.setAttribute("allowedDaysMsg", allowedDaysMsg);
+            int maxDays = LicenseManager.getInstance().getJahiaMaxUsageDays();
+            if (maxDays > 0) {
+                Integer limit = Integer.valueOf(maxDays);
+                request.setAttribute("allowedDays", limit);
+                request.setAttribute("allowedDaysMsg", new EngineMessage("org.jahia.bin.JahiaConfigurationWizard.congratulations.daysLeftInLicense.label", limit));
             }
         } catch (Exception e) {
             logger.error("Enable to compute allowed days.");
