@@ -1,36 +1,19 @@
 /**
- * 
- * This file is part of Jahia: An integrated WCM, DMS and Portal Solution
- * Copyright (C) 2002-2009 Jahia Limited. All rights reserved.
- * 
- * This program is free software; you can redistribute it and/or
- * modify it under the terms of the GNU General Public License
- * as published by the Free Software Foundation; either version 2
- * of the License, or (at your option) any later version.
- * 
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
- * GNU General Public License for more details.
- * 
- * You should have received a copy of the GNU General Public License
- * along with this program; if not, write to the Free Software
- * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
- * 
- * As a special exception to the terms and conditions of version 2.0 of
- * the GPL (or any later version), you may redistribute this Program in connection
- * with Free/Libre and Open Source Software ("FLOSS") applications as described
- * in Jahia's FLOSS exception. You should have recieved a copy of the text
- * describing the FLOSS exception, and it is also available here:
- * http://www.jahia.com/license"
- * 
- * Commercial and Supported Versions of the program
- * Alternatively, commercial and supported versions of the program may be used
- * in accordance with the terms contained in a separate written agreement
- * between you and Jahia Limited. If you are unsure which license is appropriate
- * for your use, please contact the sales department at sales@jahia.com.
+ * Jahia Enterprise Edition v6
+ *
+ * Copyright (C) 2002-2009 Jahia Solutions Group. All rights reserved.
+ *
+ * Jahia delivers the first Open Source Web Content Integration Software by combining Enterprise Web Content Management
+ * with Document Management and Portal features.
+ *
+ * The Jahia Enterprise Edition is delivered ON AN "AS IS" BASIS, WITHOUT WARRANTY OF ANY KIND, EITHER EXPRESSED OR
+ * IMPLIED.
+ *
+ * Jahia Enterprise Edition must be used in accordance with the terms contained in a separate license agreement between
+ * you and Jahia (Jahia Sustainable Enterprise License - JSEL).
+ *
+ * If you are unsure which license is appropriate for your use, please contact the sales department at sales@jahia.com.
  */
-
 package org.jahia.ajax.gwt.templates.components.toolbar.server.ajaxaction.impl;
 
 import org.jahia.ajax.gwt.client.data.GWTJahiaAjaxActionResult;
@@ -59,11 +42,8 @@ public class SimpleAjaxActionImpl extends AjaxAction {
     private final static String LICENSE_INFO = "licenseinfo";
     private final static String SEND_EMAIL_INFO = "sendEmail";
 
-    //caches
-    private final static String PUBLISH_PAGE = "publishPage";
-
     /**
-     * Execute the method that correponds to the action
+     * Execute the method that corresponds to the action
      *
      * @param jahiaData
      * @param action
@@ -97,25 +77,16 @@ public class SimpleAjaxActionImpl extends AjaxAction {
     }
 
     /**
-     * Get informatino about the license
+     * Get information about the license
      *
      * @param jahiaData
      * @param gwtPropertiesMap
      * @return
      */
     public String licenseInfo(JahiaData jahiaData, Map gwtPropertiesMap) {
-        final LicenseManager licenseManager = LicenseManager.getInstance();
-        final LicensePackage jahiaLicensePackage = licenseManager.getLicensePackage(LicenseConstants.JAHIA_PRODUCT_NAME);
-        // we take a component that has an expiration date here. Please modify this
-        // if licensing policy changes.
-        License manageSiteLicense = jahiaLicensePackage.getLicense("org.jahia.actions.server.admin.sites.ManageSites");
-        final Limit daysLeftLimit = manageSiteLicense.getLimit("maxUsageDays");
-        // the limit might be null if a license has been created without
-        // this limit.
-        if (daysLeftLimit != null) {
-            final int maxDays = Integer.parseInt(daysLeftLimit.getValueStr());
-            final EngineMessage allowedDaysMsg = new EngineMessage("org.jahia.bin.JahiaConfigurationWizard.congratulations.daysLeftInLicense.label", new Integer(maxDays));
-            return getMessage(jahiaData, allowedDaysMsg);
+        int daysLeft = LicenseManager.getInstance().getJahiaMaxUsageDays();
+        if (daysLeft > 0) {
+            return getMessage(jahiaData, new EngineMessage("org.jahia.bin.JahiaConfigurationWizard.congratulations.daysLeftInLicense.label", Integer.valueOf(daysLeft)));
         }
         return "unknown";
     }
