@@ -1,36 +1,19 @@
 /**
- * 
- * This file is part of Jahia: An integrated WCM, DMS and Portal Solution
- * Copyright (C) 2002-2009 Jahia Limited. All rights reserved.
- * 
- * This program is free software; you can redistribute it and/or
- * modify it under the terms of the GNU General Public License
- * as published by the Free Software Foundation; either version 2
- * of the License, or (at your option) any later version.
- * 
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
- * GNU General Public License for more details.
- * 
- * You should have received a copy of the GNU General Public License
- * along with this program; if not, write to the Free Software
- * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
- * 
- * As a special exception to the terms and conditions of version 2.0 of
- * the GPL (or any later version), you may redistribute this Program in connection
- * with Free/Libre and Open Source Software ("FLOSS") applications as described
- * in Jahia's FLOSS exception. You should have recieved a copy of the text
- * describing the FLOSS exception, and it is also available here:
- * http://www.jahia.com/license"
- * 
- * Commercial and Supported Versions of the program
- * Alternatively, commercial and supported versions of the program may be used
- * in accordance with the terms contained in a separate written agreement
- * between you and Jahia Limited. If you are unsure which license is appropriate
- * for your use, please contact the sales department at sales@jahia.com.
+ * Jahia Enterprise Edition v6
+ *
+ * Copyright (C) 2002-2009 Jahia Solutions Group. All rights reserved.
+ *
+ * Jahia delivers the first Open Source Web Content Integration Software by combining Enterprise Web Content Management
+ * with Document Management and Portal features.
+ *
+ * The Jahia Enterprise Edition is delivered ON AN "AS IS" BASIS, WITHOUT WARRANTY OF ANY KIND, EITHER EXPRESSED OR
+ * IMPLIED.
+ *
+ * Jahia Enterprise Edition must be used in accordance with the terms contained in a separate license agreement between
+ * you and Jahia (Jahia Sustainable Enterprise License - JSEL).
+ *
+ * If you are unsure which license is appropriate for your use, please contact the sales department at sales@jahia.com.
  */
-
 //
 // $Id$
 
@@ -67,18 +50,17 @@ public class EngineToolBox {
     private static final String JSP_FLUSHCONFIRM = "/engines/audit/flushconfirm.jsp";
 
     /** Logger instance */
-    private static final org.apache.log4j.Logger logger =
-            org.apache.log4j.Logger.getLogger (EngineToolBox.class);
+    private static final org.apache.log4j.Logger logger = org.apache.log4j.Logger.getLogger (EngineToolBox.class);
 
 
-    private EngineToolBox () {
+    private EngineToolBox() {
     }
 
 
     /**
      * returns a single instance of the object
      */
-    public static EngineToolBox getInstance () {
+    public static EngineToolBox getInstance() {
         return instance;
     }
 
@@ -86,8 +68,8 @@ public class EngineToolBox {
     /**
      * authoriseRender
      */
-    public boolean authoriseRender (final ProcessingContext jParams) {
-        return jParams.getOperationMode ().equals(ProcessingContext.EDIT);
+    public boolean authoriseRender(final ProcessingContext jParams) {
+        return jParams.getOperationMode().equals(ProcessingContext.EDIT);
     } // end authoriseRender
 
 
@@ -104,68 +86,47 @@ public class EngineToolBox {
      * @throws JahiaException
      * @return boolean
      */
-    public boolean processFieldTypes (final JahiaField theField,
-                                      final JahiaContainer theContainer,
-                                      final String engineName,
-                                      final ProcessingContext jParams,
-                                      final int mode,
-                                      final Map<String, Object> engineMap)
-            throws JahiaException {
+    public boolean processFieldTypes(final JahiaField theField, final JahiaContainer theContainer, final String engineName,
+                                     final ProcessingContext jParams, final int mode, final Map<String, Object> engineMap) throws JahiaException {
         boolean out;
 
-        engineMap.put("fieldsEditCallingEngineName",engineName);
-        engineMap.put(engineName+"."+"theContainer",theContainer);
-        engineMap.put(engineName+"."+"theField",theField);
-        engineMap.put("theField",theField);
+        engineMap.put("fieldsEditCallingEngineName", engineName);
+        engineMap.put(engineName + "." + "theContainer", theContainer);
+        engineMap.put(engineName + "." + "theField", theField);
+        engineMap.put("theField", theField);
 
-        int fieldType = theField.getDefinition ().getType ();
+        int fieldType = theField.getDefinition().getType();
         if (logger.isDebugEnabled()) {
             logger.debug(" field type is " + fieldType);
         }
         if (fieldType <= 0) {
-            fieldType = theField.getType ();
+            fieldType = theField.getType();
         }
         // get the engine className
 
-        final String fieldEngineName = theField.getEngineName ();
+        final String fieldEngineName = theField.getEngineName();
 
         try {
             final Class<?> theParams[] = null;
-            final Method thisMethod = Class.forName(fieldEngineName)
-                    .getDeclaredMethod("getInstance", theParams);
+            final Method thisMethod = Class.forName(fieldEngineName).getDeclaredMethod("getInstance", theParams);
             final Object args[] = null;
 
-            final FieldSubEngine engine = (FieldSubEngine) thisMethod.invoke(
-                    null, args);
+            final FieldSubEngine engine = (FieldSubEngine) thisMethod.invoke(null, args);
 
-            out = engine.handleField(jParams, new Integer(mode), engineMap);
+            out = engine.handleField(jParams, Integer.valueOf(mode), engineMap);
 
             if (logger.isDebugEnabled()) {
-                logger.debug("Editing "
-                        + fieldEngineName.substring(fieldEngineName
-                                .lastIndexOf(".")) + " !");
+                logger.debug("Editing " + fieldEngineName.substring(fieldEngineName.lastIndexOf(".")) + " !");
             }
 
         } catch (ClassNotFoundException cnfe) {
-            throw new JahiaException("EngineToolBox:processFieldTypes",
-                    "Class not found!", JahiaException.PAGE_ERROR,
-                    JahiaException.CRITICAL_SEVERITY, cnfe);
-
+            throw new JahiaException("EngineToolBox:processFieldTypes", "Class not found!", JahiaException.PAGE_ERROR, JahiaException.CRITICAL_SEVERITY, cnfe);
         } catch (NoSuchMethodException nsme) {
-            throw new JahiaException("EngineToolBox:processFieldTypes",
-                    "Method not found!", JahiaException.PAGE_ERROR,
-                    JahiaException.CRITICAL_SEVERITY, nsme);
-
+            throw new JahiaException("EngineToolBox:processFieldTypes", "Method not found!", JahiaException.PAGE_ERROR, JahiaException.CRITICAL_SEVERITY, nsme);
         } catch (IllegalAccessException iae) {
-            throw new JahiaException("EngineToolBox:processFieldTypes",
-                    "Illegal access", JahiaException.PAGE_ERROR,
-                    JahiaException.CRITICAL_SEVERITY, iae);
-
+            throw new JahiaException("EngineToolBox:processFieldTypes", "Illegal access", JahiaException.PAGE_ERROR, JahiaException.CRITICAL_SEVERITY, iae);
         } catch (InvocationTargetException ite) {
-
-            throw new JahiaException("EngineToolBox:processFieldTypes",
-                    "InvocationTarget exception", JahiaException.PAGE_ERROR,
-                    JahiaException.CRITICAL_SEVERITY, ite);
+            throw new JahiaException("EngineToolBox:processFieldTypes", "InvocationTarget exception", JahiaException.PAGE_ERROR, JahiaException.CRITICAL_SEVERITY, ite);
         }
 
 
@@ -175,8 +136,7 @@ public class EngineToolBox {
         /** todo is there a way to do this only when we really update a
          * field ? Maybe move this to a field.save() generic method.
          */
-        ServicesRegistry.getInstance().getJahiaFieldService().
-                invalidateCacheField(theField.getID());
+        ServicesRegistry.getInstance().getJahiaFieldService().invalidateCacheField(theField.getID());
         return out;
     } // end processFieldTypes
 
@@ -185,9 +145,8 @@ public class EngineToolBox {
      *
      * @param jParams a ProcessingContext object
      */
-    public void displayScreen (final ProcessingContext jParams, final Map<String, Object> engineMap)
-            throws JahiaException {
-        EngineRenderer.getInstance ().render (jParams, engineMap);
+    public void displayScreen(final ProcessingContext jParams, final Map<String, Object> engineMap) throws JahiaException {
+        EngineRenderer.getInstance().render(jParams, engineMap);
     } // end displayScreen
 
 
@@ -198,9 +157,7 @@ public class EngineToolBox {
      * @param objectType an <code>int</code> representing the type of the object processed
      * @param engineMap  then engine map, to be forwarded to the JSP file
      */
-    public void loadLogData (final ProcessingContext jParams, 
-            final int objectType, final Map<String, Object> engineMap)
-            throws JahiaException {
+    public void loadLogData(final ProcessingContext jParams, final int objectType, final Map<String, Object> engineMap) throws JahiaException {
 
         // set default values
         int flushLogs = 0;
@@ -210,34 +167,29 @@ public class EngineToolBox {
         // get parameters
         final String userAgent = jParams.getUserAgent();
         //boolean sendAsFile = (jParams.getRequest ().getParameter ("send") != null);
-        if (jParams.getParameter ("flush") != null) {
-            flushLogs = Integer.parseInt (jParams.getParameter ("flush"));
+        if (jParams.getParameter("flush") != null) {
+            flushLogs = Integer.parseInt(jParams.getParameter("flush"));
         }
-        final int objectID = JahiaObjectTool.getInstance ().getObjectID (objectType, engineMap);
-        final String objectName = JahiaObjectTool.getInstance ().getObjectName (objectType,
-                engineMap);
+        final int objectID = JahiaObjectTool.getInstance().getObjectID(objectType, engineMap);
+        final String objectName = JahiaObjectTool.getInstance().getObjectName(objectType, engineMap);
 
         // Try to get the Audit Log Manager Service
-        final ServicesRegistry registry = ServicesRegistry.getInstance ();
+        final ServicesRegistry registry = ServicesRegistry.getInstance();
         final JahiaAuditLogManagerService mAuditLogManager;
         if (registry != null) {
-            mAuditLogManager = registry.getJahiaAuditLogManagerService ();
+            mAuditLogManager = registry.getJahiaAuditLogManagerService();
             if (mAuditLogManager == null) {
-                throw new JahiaException (MSG_INTERNAL_ERROR, "Properties Engine could not get the Audit Log Manager Service instance.",
-                        JahiaException.SERVICE_ERROR, JahiaException.CRITICAL_SEVERITY);
+                throw new JahiaException(MSG_INTERNAL_ERROR, "Properties Engine could not get the Audit Log Manager Service instance.", JahiaException.SERVICE_ERROR, JahiaException.CRITICAL_SEVERITY);
             }
         } else {
-            throw new JahiaException (MSG_INTERNAL_ERROR, "Properties Engine could not get the Service Registry instance.",
-                    JahiaException.REGISTRY_ERROR, JahiaException.CRITICAL_SEVERITY);
+            throw new JahiaException(MSG_INTERNAL_ERROR, "Properties Engine could not get the Service Registry instance.", JahiaException.REGISTRY_ERROR, JahiaException.CRITICAL_SEVERITY);
         }
 
         // logs
-        engineMap.put ("flushLogs", new Integer (flushLogs));
-        engineMap.put ("sendLogsURL",
-                ManageLogs_Engine.getInstance ().renderLink (jParams, ""));
-        engineMap.put ("objectTypeName",
-                JahiaObjectTool.getInstance ().getObjectTypeName (objectType));
-        engineMap.put ("objectIDObj", new Integer (objectID));
+        engineMap.put("flushLogs", Integer.valueOf(flushLogs));
+        engineMap.put("sendLogsURL", ManageLogs_Engine.getInstance().renderLink(jParams, ""));
+        engineMap.put("objectTypeName", JahiaObjectTool.getInstance().getObjectTypeName(objectType));
+        engineMap.put ("objectIDObj", Integer.valueOf(objectID));
         engineMap.put ("objectName", objectName);
         engineMap.put ("userAgent", userAgent);
 
@@ -248,21 +200,17 @@ public class EngineToolBox {
         //                                                           and display clean log window
         switch (flushLogs) {
             case 1:
-                output = registry.getJahiaFetcherService ().fetchServlet ((ParamBean)jParams,
-                        JSP_FLUSHCONFIRM);
+                output = registry.getJahiaFetcherService().fetchServlet((ParamBean) jParams, JSP_FLUSHCONFIRM);
                 break;
-
             case 2:
-                deletedRows = mAuditLogManager.flushLogs (objectType, objectID, jParams);
-
+                deletedRows = mAuditLogManager.flushLogs(objectType, objectID, jParams);
             default:
-                final List logData = mAuditLogManager.getLog (objectType, objectID,
-                        jParams);
-                engineMap.put ("logData", logData);
-                engineMap.put ("deletedRows", new Integer (deletedRows));
-                output = registry.getJahiaFetcherService ().fetchServlet ((ParamBean)jParams, JSP_LOGFORM);
+                final List<Map<String, Object>> logData = mAuditLogManager.getLog(objectType, objectID, jParams);
+                engineMap.put("logData", logData);
+                engineMap.put("deletedRows", Integer.valueOf(deletedRows));
+                output = registry.getJahiaFetcherService().fetchServlet((ParamBean) jParams, JSP_LOGFORM);
         }
-        engineMap.put ("logForm", output);
+        engineMap.put("logForm", output);
 
     }
 
