@@ -1,36 +1,19 @@
 /**
- * 
- * This file is part of Jahia: An integrated WCM, DMS and Portal Solution
- * Copyright (C) 2002-2009 Jahia Limited. All rights reserved.
- * 
- * This program is free software; you can redistribute it and/or
- * modify it under the terms of the GNU General Public License
- * as published by the Free Software Foundation; either version 2
- * of the License, or (at your option) any later version.
- * 
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
- * GNU General Public License for more details.
- * 
- * You should have received a copy of the GNU General Public License
- * along with this program; if not, write to the Free Software
- * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
- * 
- * As a special exception to the terms and conditions of version 2.0 of
- * the GPL (or any later version), you may redistribute this Program in connection
- * with Free/Libre and Open Source Software ("FLOSS") applications as described
- * in Jahia's FLOSS exception. You should have received a copy of the text
- * describing the FLOSS exception, and it is also available here:
- * http://www.jahia.com/license
- * 
- * Commercial and Supported Versions of the program
- * Alternatively, commercial and supported versions of the program may be used
- * in accordance with the terms contained in a separate written agreement
- * between you and Jahia Limited. If you are unsure which license is appropriate
- * for your use, please contact the sales department at sales@jahia.com.
+ * Jahia Enterprise Edition v6
+ *
+ * Copyright (C) 2002-2009 Jahia Solutions Group. All rights reserved.
+ *
+ * Jahia delivers the first Open Source Web Content Integration Software by combining Enterprise Web Content Management
+ * with Document Management and Portal features.
+ *
+ * The Jahia Enterprise Edition is delivered ON AN "AS IS" BASIS, WITHOUT WARRANTY OF ANY KIND, EITHER EXPRESSED OR
+ * IMPLIED.
+ *
+ * Jahia Enterprise Edition must be used in accordance with the terms contained in a separate license agreement between
+ * you and Jahia (Jahia Sustainable Enterprise License - JSEL).
+ *
+ * If you are unsure which license is appropriate for your use, please contact the sales department at sales@jahia.com.
  */
-
 package org.jahia.taglibs.jcr.file;
 
 import org.apache.struts.taglib.TagUtils;
@@ -55,6 +38,7 @@ import java.util.*;
  * Time: 18:26:37
  * To change this template use File | Settings | File Templates.
  */
+@SuppressWarnings("serial")
 public class PropertyInputTag extends PropertyValueTag {
     private String name = "propertyDefinition";
     private String property;
@@ -149,7 +133,7 @@ public class PropertyInputTag extends PropertyValueTag {
         name = name.replace(':','_');
         String[] cs = propDef.getValueConstraints();
 
-        request.setAttribute("multiple", new Boolean(propDef.isMultiple()));
+        request.setAttribute("multiple", Boolean.valueOf(propDef.isMultiple()));
         request.setAttribute("propertyName", name);
         request.setAttribute("value", value);
         request.setAttribute("values", cs);
@@ -167,7 +151,7 @@ public class PropertyInputTag extends PropertyValueTag {
 
 
         String name = propDef.getName();
-        List selected = new ArrayList();
+        List<String> selected = new ArrayList<String>();
         if (objectNode != null && objectNode.hasProperty(name)) {
             if (propDef.isMultiple()) {
                 Value[] values = objectNode.getProperty(name).getValues();
@@ -192,15 +176,15 @@ public class PropertyInputTag extends PropertyValueTag {
         String contextId = name + "@" + root;
         HttpSession s = pageContext.getSession();
 
-        Map categoryDataMap = (Map) s.getAttribute(CategoriesSelect_Engine.ENGINE_NAME + ".categoriesDataMap." + contextId);
+        Map<String, Object> categoryDataMap = (Map<String, Object>) s.getAttribute(CategoriesSelect_Engine.ENGINE_NAME + ".categoriesDataMap." + contextId);
         if (categoryDataMap == null) {
-            categoryDataMap = new HashMap();
+            categoryDataMap = new HashMap<String, Object>();
             s.setAttribute(CategoriesSelect_Engine.ENGINE_NAME + ".categoriesDataMap." + contextId, categoryDataMap);
         }
 
         String selectedIds = "";
-        for (Iterator iterator = selected.iterator(); iterator.hasNext();) {
-            String key = (String) iterator.next();
+        for (Iterator<String> iterator = selected.iterator(); iterator.hasNext();) {
+            String key = iterator.next();
             Category c = Category.getCategory(key);
             selectedIds += (new Integer(c.getObjectKey().getIdInType()));
             if (iterator.hasNext()) {
